# anytime-valid-inference-in-adaptive-experiments

./: README.md  pyproject.toml  rct_results.py  rct_simulations.py  simulation_results.py
data/: .gitignore
data/rct_sim/: label_recoded.R  rct_replication.R
src/: av_utils.py  bandit.py  mad.py  model.py
