[project]
name = "robust-adaptive-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.3",
    "lxml>=6.0.2",
    "numpy==2.2.2",
    "pandas==2.2.3",
    "plotnine==0.14.5",
    "pyssed>=0.2.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "statsmodels==0.14.4",
    "tqdm==4.67.1",
]
